--- a/index.html
+++ b/index.html
@@ -5,77 +5,86 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>Project: Landing Page</title>
-		<link rel="stylesheet" href="/style.css" />
+		<link rel="stylesheet" href="style.css" />
 	</head>
 	<body>
-		<section class="hero">
-			<header>
-				<div class="logo">Header Logo</div>
-				<ul class="links">
-					<li><a href="theodinproject.com">header link one</a></li>
-					<li><a href="theodinproject.com">header link two</a></li>
-					<li><a href="theodinproject.com">header link three</a></li>
-				</ul>
-			</header>
-			<div class="hero-content">
-				<div class="hero-text">
-					<span class="hero-main-text">This website is awesome</span>
-					<span class="hero-subtext">
-						This website has some subtext that goes here under the main title.
-						It's a smaller font and the color is lower contrast.
-					</span>
-					<button>Sign up</button>
+		<div class="content">
+			<section class="hero">
+				<header>
+					<div class="logo">Header Logo</div>
+					<ul class="links">
+						<li><a href="theodinproject.com">header link one</a></li>
+						<li><a href="theodinproject.com">header link two</a></li>
+						<li><a href="theodinproject.com">header link three</a></li>
+					</ul>
+				</header>
+				<div class="hero-content">
+					<div class="hero-text">
+						<div class="hero-main-text">This website is awesome</div>
+						<div class="hero-subtext">
+							This website has some subtext that goes here under the main title.
+							It's a smaller font and the color is lower contrast.
+						</div>
+						<button>Sign up</button>
+					</div>
+					<div class="image-placeholder">
+						<span class="image-placeholder-text"
+							>this is a placeholder for an image</span
+						>
+					</div>
 				</div>
-				<div class="image-placeholder">this is a placeholder for an image</div>
-			</div>
-		</section>
-		<section class="information">
-			<span>Some random information.</span>
-			<div class="info-container">
-				<div class="info">
-					<div class="info-placeholder">/</div>
-					<span class="info-text"
-						>this is some subtext under an illustration or image</span
-					>
+			</section>
+			<section class="information">
+				<div class="info-header-text">Some random information.</div>
+				<div class="info-container">
+					<div class="info">
+						<div class="info-placeholder"></div>
+						<span class="info-text"
+							>this is some subtext under an illustration or image</span
+						>
+					</div>
+					<div class="info">
+						<div class="info-placeholder"></div>
+						<span class="info-text"
+							>this is some subtext under an illustration or image</span
+						>
+					</div>
+					<div class="info">
+						<div class="info-placeholder"></div>
+						<span class="info-text"
+							>this is some subtext under an illustration or image</span
+						>
+					</div>
+					<div class="info">
+						<div class="info-placeholder"></div>
+						<span class="info-text"
+							>this is some subtext under an illustration or image</span
+						>
+					</div>
 				</div>
-				<div class="info">
-					<div class="info-placeholder">/</div>
-					<span class="info-text"
-						>this is some subtext under an illustration or image</span
-					>
+			</section>
+			<section class="quote">
+				<div class="quote-content">
+					<div class="quote-text">
+						This is an inspiring quote, or a testimonial from a customer. Maybe
+						it's just filling up space, or maybe people will actually read it.
+						Who knows? All I know is that it looks nice.
+					</div>
+					<span class="quote-attribution">-Thor, God of Thunder</span>
 				</div>
-				<div class="info">
-					<div class="info-placeholder">/</div>
-					<span class="info-text"
-						>this is some subtext under an illustration or image</span
-					>
+			</section>
+			<section class="cta">
+				<div class="cta-banner">
+					<div class="cta-banner-content">
+						<div class="cta-text">Call to action! It's time!</div>
+						<div class="cta-subtext">
+							Sign up for our product by clicking that button right over there!
+						</div>
+					</div>
+					<button class="cta-btn">Sign up</button>
 				</div>
-				<div class="info">
-					<div class="info-placeholder">/</div>
-					<span class="info-text"
-						>this is some subtext under an illustration or image</span
-					>
-				</div>
-			</div>
-		</section>
-		<section class="quote">
-			<div class="quote-text">
-				This is an inspiring quote, or a testimonial from a customer. Maybe it's
-				just filling up space, or maybe people will actually read it. Who knows?
-				All I know is that it looks nice.
-			</div>
-			<span class="quote-atribution">-Thor, God of Thunder</span>
-		</section>
-		<section class="cta">
-			<div class="cta-banner">
-				<span class="cta-text">Call to action! It's time!</span>
-				<span class="cta-subtext"
-					>Sign up for our product by clicking that button right over
-					there!</span
-				>
-				<button>Sign up</button>
-			</div>
-		</section>
+			</section>
+		</div>
 		<footer>Copyright &copy; The Odin Project 2021</footer>
 	</body>
 </html>
